--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RecycloTronics</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     
+    <script src="script.js"></script>
 </body>
 </html>
