--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <div class="main">
+        <div class="page1"></div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
