--- a/index.html
+++ b/index.html
@@ -8,7 +8,20 @@
 </head>
 <body>
     <div class="main">
-        <div class="page1"></div>
+        <div class="page1">
+            <nav>
+                <img src="" alt="LOGO">
+                <div id="nav2">
+                    <h4>Home</h4>
+                    <h4>About Us</h4>
+                    <h4>Locater</h4>
+                    <h4>Contact</h4>
+                </div>
+                <div id="nav3">
+                    <div class="circle"></div>
+                </div>
+            </nav>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
