--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="main">
         <div class="page1">
             <nav>
-                <img src="" alt="LOGO">
+                <img src="./assets/LOGO.png" alt="LOGO">
                 <div id="nav2">
                     <h4>Home</h4>
                     <h4>About Us</h4>
