Added smooth scrolling and video

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RecycloTronics</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -21,8 +22,13 @@
                     <div class="circle"></div>
                 </div>
             </nav>
+            <h1>RecycloTronics</h1>
+            <h2>E-Waste E-Solved</h2>
+            <video src="/assets/header video.mp4" autoplay muted loop></video>
+            <!-- <iframe width="750" height="480" src="https://www.youtube.com/embed/5k-PR4y_ng0" title="Wasted: 50 million tonnes of e-waste every year" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> -->
         </div>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
