Added smooth scrolling and bit intro of page 2

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div class="main">
+        <!-- PAGE-1 -->
         <div class="page1">
             <nav>
                 <img src="./assets/LOGO.png" alt="LOGO">
@@ -27,8 +28,19 @@
             <video src="/assets/header video.mp4" autoplay muted loop></video>
             <!-- <iframe width="750" height="480" src="https://www.youtube.com/embed/5k-PR4y_ng0" title="Wasted: 50 million tonnes of e-waste every year" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> -->
         </div>
+
+        <!-- PAGE -2 -->
+        <div class="page2">
+            <h1>We are RecycloTronics,</h1>
+            <div class="page2-left">
+                <h2>One Stop Solution for your E-Waste to be turned into credits.</h2>
+            </div>
+            <div class="page2-right"><p></p></div>
+        </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js" integrity="sha512-16esztaSRplJROstbIIdwX3N97V1+pZvV33ABoG1H2OyTttBxEGkTsoIVsiP1iaTtM8b3+hu2kB6pQ4Clr5yug==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js" integrity="sha512-Ic9xkERjyZ1xgJ5svx3y0u3xrvfT/uPkV99LBwe68xjy/mGtO+4eURHZBW2xW4SZbFrF1Tf090XqB+EVgXnVjw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="script.js"></script>
 </body>
 </html>
