Completed second page

--- a/index.html
+++ b/index.html
@@ -32,10 +32,13 @@
         <!-- PAGE -2 -->
         <div class="page2">
             <h1>We are RecycloTronics,</h1>
-            <div class="page2-left">
-                <h2>One Stop Solution for your E-Waste to be turned into credits.</h2>
+            <div class="page2-container">
+                <div class="page2-left">
+                    <h2>One Stop Solution for your E-Waste to be turned into credits.</h2>
+                </div>
+                <div class="page2-right"><p>Welcome to RecycloTronics, your gateway to conveniently locate nearby e-waste collectors, where you can responsibly dispose of your electronic waste and be rewarded for your commitment to sustainability.</p>
+                <button>About Us!</button></div>
             </div>
-            <div class="page2-right"><p></p></div>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
