--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RecycloTronics</title>
+    <link rel="shortcut icon" href="./assets/LOGO.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="cursor"></div>
     <div class="main">
         <!-- PAGE-1 -->
         <div class="page1">
@@ -40,6 +42,19 @@
                 <button>About Us!</button></div>
             </div>
         </div>
+        <!-- Page-3 -->
+            <div class="page3">
+                <h1>Why Recycle?</h1>
+                <div class="page3-part1">
+                    <img src="./assets/Part-1.jpeg" alt="">
+                    <video autoplay loop muted src="./assets/part-1 video.mp4"></video>
+                </div>
+                <div class="page3-part1">
+                    <img src="./assets/Part-1.jpeg" alt="">
+                    <video autoplay loop muted src="./assets/part-1 video.mp4"></video>
+                </div>
+            </div>
+        
     </div>
     <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js" integrity="sha512-16esztaSRplJROstbIIdwX3N97V1+pZvV33ABoG1H2OyTttBxEGkTsoIVsiP1iaTtM8b3+hu2kB6pQ4Clr5yug==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
