Few normal changes

--- a/index.html
+++ b/index.html
@@ -54,7 +54,10 @@
                     <video autoplay loop muted src="./assets/part-1 video.mp4"></video>
                 </div>
             </div>
-        
+        <!-- PAGE-4 -->
+        <div class="page4"></div>
+        <!-- PAGE-5 -->
+        <div class="page5"></div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js" integrity="sha512-16esztaSRplJROstbIIdwX3N97V1+pZvV33ABoG1H2OyTttBxEGkTsoIVsiP1iaTtM8b3+hu2kB6pQ4Clr5yug==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
