--- a/index.html
+++ b/index.html
@@ -55,7 +55,11 @@
                 </div>
             </div>
         <!-- PAGE-4 -->
-        <div class="page4"></div>
+        <div class="page4">
+            <div class="elem">
+                <img src="" alt="">
+            </div>
+        </div>
         <!-- PAGE-5 -->
         <div class="page5"></div>
     </div>
