Added image and hover effect on learn earn page

--- a/index.html
+++ b/index.html
@@ -57,7 +57,28 @@
         <!-- PAGE-4 -->
         <div class="page4">
             <div class="elem">
-                <img src="" alt="">
+                <img src="./assets/learn1.png" alt="" class="img1">
+                <div class="text-div">
+                    <h1>LEARN</h1>
+                    <h1>CONTENT</h1>
+                </div>
+                <img src="./assets/learn2.png" alt="" class="img2">
+            </div>
+            <div class="elem">
+                <img src="./assets/TURN1.png" alt="" class="img1">
+                <div class="text-div">
+                    <h1>TURN</h1>
+                    <h1>E-WASTE</h1>
+                </div>
+                <img src="./assets/TURN2.png" alt="" class="img2">
+            </div>
+            <div class="elem">
+                <img src="./assets/EARN1.png" alt="" class="img1">
+                <div class="text-div">
+                    <h1>EARN</h1>
+                    <h1>CREDIT</h1>
+                </div>
+                <img src="./assets/EARN2.png" alt="" class="img2">
             </div>
         </div>
         <!-- PAGE-5 -->
