Added images and made a raw content out of it

--- a/index.html
+++ b/index.html
@@ -10,21 +10,22 @@
 </head>
 <body>
     <div class="cursor"></div>
+    <nav>
+        <img src="./assets/LOGO.png" alt="LOGO">
+        <div id="nav2">
+            <h4>Home</h4>
+            <h4>About Us</h4>
+            <h4>Locater</h4>
+            <h4>Contact</h4>
+        </div>
+        <div id="nav3">
+            <div class="circle"></div>
+        </div>
+    </nav>
+    <div id="purple"></div>
     <div class="main">
         <!-- PAGE-1 -->
         <div class="page1">
-            <nav>
-                <img src="./assets/LOGO.png" alt="LOGO">
-                <div id="nav2">
-                    <h4>Home</h4>
-                    <h4>About Us</h4>
-                    <h4>Locater</h4>
-                    <h4>Contact</h4>
-                </div>
-                <div id="nav3">
-                    <div class="circle"></div>
-                </div>
-            </nav>
             <h1>RecycloTronics</h1>
             <h2>E-Waste E-Solved</h2>
             <video src="/assets/header video.mp4" autoplay muted loop></video>
@@ -57,6 +58,7 @@
         <!-- PAGE-4 -->
         <div class="page4">
             <div class="elem">
+                <p>What you can do</p>
                 <img src="./assets/learn1.png" alt="" class="img1">
                 <div class="text-div">
                     <h1>LEARN</h1>
@@ -82,7 +84,31 @@
             </div>
         </div>
         <!-- PAGE-5 -->
-        <div class="page5"></div>
+        <div class="page5">
+            <h2>STATES COVERED</h2>
+            <div class="box" data-image="./assets/Jpr.jpg">
+                <h3>Rajasthan</h3>
+                <h4>Jaipur</h4>
+            </div>
+            <div class="box" data-image="./assets/Delhi.jpeg">
+                <h3>Delhi</h3>
+                <h4>New Delhi</h4>
+            </div>
+            <div class="box" data-image="./assets/Bangalore.jpg">
+                <h3>Karnataka</h3>
+                <h4>Bangalore</h4>
+            </div>
+            <div class="box" data-image="./assets/Chennai.jpeg">
+                <h3>Tamil Nadu</h3>
+                <h4>Chennai</h4>
+            </div>
+            <div class="box" data-image="./assets/Pune.png">
+                <h3>Maharashtra</h3>
+                <h4>Pune</h4>
+            </div>
+            <footer></footer>
+        </div>
+
     </div>
     <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js" integrity="sha512-16esztaSRplJROstbIIdwX3N97V1+pZvV33ABoG1H2OyTttBxEGkTsoIVsiP1iaTtM8b3+hu2kB6pQ4Clr5yug==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
