--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
             <div class="circle"></div>
         </div>
     </nav>
-    <div id="purple"></div>
+    <div id="purple">
+    </div>
     <div class="main">
         <!-- PAGE-1 -->
         <div class="page1">
