Completed the footer

--- a/index.html
+++ b/index.html
@@ -107,13 +107,55 @@
                 <h3>Maharashtra</h3>
                 <h4>Pune</h4>
             </div>
-            <footer></footer>
+            <footer>
+                <div class="row">
+                    <div class="col">
+                        <img src="./assets/LOGO.png" alt="Logo" class="logo" height="40px" width="40px">
+                        <p>Connect with us on our social media and join us in this amazing jouney of converting E-Waste to E-Money</p>
+                    </div>
+                    <div class="col">
+                        <h3>Locate Us! <div class="underline"><span></span></div></h3>
+                        <p>Jecrc Foundation</p>
+                        <p>Sitapura</p>
+                        <p>Jaipur,Raj-3020xx</p>
+                        <p class="email">recyclotronics@proton.me</p>
+                        <a href="https://maps.app.goo.gl/kzyV7FURDRTKs4269">Directions!</a>
+                    </div>
+                    <div class="col">
+                        <h3>Links<div class="underline"><span></span></div></h3>
+                        <ul>
+                            <li><a href="">Home</a></li>
+                            <li><a href="">About Us!</a></li>
+                            <li><a href="">Find a Locator</a></li>
+                            <li><a href="">Login</a></li>
+                            <li><a href="">Sign Up</a></li>
+                        </ul>
+                    </div>
+                    <div class="col">
+                        <h3>NewsLetter<div class="underline"><span></span></div></h3>
+                        <form action="">
+                            <i class="fa-regular fa-envelope"></i>
+                            <input type="email" placeholder="Enter Email" id="">
+                            <button type="submit"><i class="fa-solid fa-circle-arrow-right"></i></button>
+                        </form>
+                        <div class="social">
+                            <a href=""><i class="fab fa-facebook"></i></a>
+                            <a href=""><i class="fab fa-instagram"></i></a>
+                            <a href=""><i class="fab fa-twitter"></i></a>
+                            <a href=""><i class="fab fa-linkedin"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <hr>
+                <p class="copyright">RecycloTronics &copy 2023- All Rights Reserved;</p>
+            </footer>
         </div>
 
     </div>
     <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js" integrity="sha512-16esztaSRplJROstbIIdwX3N97V1+pZvV33ABoG1H2OyTttBxEGkTsoIVsiP1iaTtM8b3+hu2kB6pQ4Clr5yug==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js" integrity="sha512-Ic9xkERjyZ1xgJ5svx3y0u3xrvfT/uPkV99LBwe68xjy/mGtO+4eURHZBW2xW4SZbFrF1Tf090XqB+EVgXnVjw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://kit.fontawesome.com/f5a9ff35dc.js" crossorigin="anonymous"></script>
     <script src="script.js"></script>
 </body>
 </html>
