Finalised footer may need minor changes

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             <footer>
                 <div class="row">
                     <div class="col">
-                        <img src="./assets/LOGO.png" alt="Logo" class="logo" height="40px" width="40px">
+                        <img src="./assets/LOGO.png" alt="Logo" class="logo">
                         <p>Connect with us on our social media and join us in this amazing jouney of converting E-Waste to E-Money</p>
                     </div>
                     <div class="col">
