--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="page3">
                 <h1>Why Recycle?</h1>
                 <div class="page3-part1">
-                    <img src="./assets/Part-1.jpeg" alt="">
+                    <img src="./assets/Part-1.png" alt="">
                     <video autoplay loop muted src="./assets/part-1 video.mp4"></video>
                 </div>
                 <div class="page3-part1">
@@ -136,7 +136,12 @@
                         <form action="">
                             <i class="fa-regular fa-envelope"></i>
                             <input type="email" placeholder="Enter Email" id="">
-                            <button type="submit"><i class="fa-solid fa-circle-arrow-right"></i></button>
+                            <button>
+                                <p>Subscribe</p>
+                                <svg stroke-width="4" stroke="currentColor" viewBox="0 0 24 24" fill="none" class="h-6 w-6" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M14 5l7 7m0 0l-7 7m7-7H3" stroke-linejoin="round" stroke-linecap="round"></path>
+                                </svg>
+                            </button>
                         </form>
                         <div class="social">
                             <a href=""><i class="fab fa-facebook"></i></a>
