--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="page3">
                 <h1>Why Recycle?</h1>
                 <div class="page3-part1">
-                    <img src="./assets/Part-1.png" alt="">
+                    <img src="./assets/Part-1-bg.png" alt="">
                     <video autoplay loop muted src="./assets/part-1 video.mp4"></video>
                 </div>
                 <div class="page3-part1">
