--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="page1">
             <h1>RecycloTronics</h1>
             <h2>E-Waste E-Solved</h2>
-            <video src="/assets/header video.mp4" autoplay muted loop></video>
+            <video src="/assets/header video final.mp4" autoplay muted loop></video>
             <!-- <iframe width="750" height="480" src="https://www.youtube.com/embed/5k-PR4y_ng0" title="Wasted: 50 million tonnes of e-waste every year" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> -->
         </div>
 
@@ -49,10 +49,10 @@
                 <h1>Why Recycle?</h1>
                 <div class="page3-part1">
                     <img src="./assets/Part-1-bg.png" alt="">
-                    <video autoplay loop muted src="./assets/part-1 video.mp4"></video>
+                    <video autoplay loop muted src="./assets/header video.mp4"></video>
                 </div>
                 <div class="page3-part1">
-                    <img src="./assets/Part-1.jpeg" alt="">
+                    <img src="./assets/part-2.png" alt="">
                     <video autoplay loop muted src="./assets/part-1 video.mp4"></video>
                 </div>
             </div>
