Image change and smooth scroll fixed

--- a/index.html
+++ b/index.html
@@ -87,19 +87,19 @@
         <!-- PAGE-5 -->
         <div class="page5">
             <h2>STATES COVERED</h2>
-            <div class="box" data-image="./assets/Jpr.jpg">
+            <div class="box" data-image="./assets/Jpr.png">
                 <h3>Rajasthan</h3>
                 <h4>Jaipur</h4>
             </div>
-            <div class="box" data-image="./assets/Delhi.jpeg">
+            <div class="box" data-image="./assets/Delhi.png">
                 <h3>Delhi</h3>
                 <h4>New Delhi</h4>
             </div>
-            <div class="box" data-image="./assets/Bangalore.jpg">
+            <div class="box" data-image="./assets/Bangalore.png">
                 <h3>Karnataka</h3>
                 <h4>Bangalore</h4>
             </div>
-            <div class="box" data-image="./assets/Chennai.jpeg">
+            <div class="box" data-image="./assets/Chennai.png">
                 <h3>Tamil Nadu</h3>
                 <h4>Chennai</h4>
             </div>
@@ -119,7 +119,7 @@
                         <p>Sitapura</p>
                         <p>Jaipur,Raj-3020xx</p>
                         <p class="email">recyclotronics@proton.me</p>
-                        <a href="https://maps.app.goo.gl/kzyV7FURDRTKs4269">Directions!</a>
+                        <a class="direction" href="https://maps.app.goo.gl/kzyV7FURDRTKs4269">Directions!<i class="fa-solid fa-diamond-turn-right"></i></a>
                     </div>
                     <div class="col">
                         <h3>Links<div class="underline"><span></span></div></h3>
