Finalised the site
Linking of pages is left!

--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
             <footer>
                 <div class="row">
                     <div class="col">
-                        <img src="./assets/LOGO.png" alt="Logo" class="logo">
-                        <p>Connect with us on our social media and join us in this amazing jouney of converting E-Waste to E-Money</p>
+                        <img src="./assets/LOGO.png" alt="Logo" class="logo"><h2>RecycloTronics</h2>
+                        <p class="desc">Connect with us on our social media and join us in this amazing jouney of converting E-Waste to E-Money.</p>
                     </div>
                     <div class="col">
                         <h3>Locate Us! <div class="underline"><span></span></div></h3>
