Added Error404 page

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <nav>
         <img src="./assets/LOGO.png" alt="LOGO">
         <div id="nav2">
-            <h4>Home</h4>
-            <h4>About Us</h4>
+            <h4><a href="#Home"></a> Home</h4>
+            <h4><a href="./daily-ui-008404-page/dist/index.html"> About Us</a></h4>
             <h4>Locater</h4>
             <h4>Contact</h4>
         </div>
