--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <nav>
         <img src="./assets/LOGO.png" alt="LOGO">
         <div id="nav2">
-            <h4><a href="#Home"></a> Home</h4>
+            <h4><a href="#Home">Home</a></h4>
             <h4><a href="./daily-ui-008404-page/dist/index.html"> About Us</a></h4>
-            <h4>Locater</h4>
-            <h4>Contact</h4>
+            <h4><a href="http://">Locater</a></h4>
+            <h4><a href="http://"></a>Contact</a></h4>
         </div>
         <div id="nav3">
             <div class="circle"></div>
