Finalised the login page

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <h4><a href="http://"></a>Contact</a></h4>
         </div>
         <div id="nav3">
-            <div class="circle"></div>
+            <a href="Login/index.html"><div class="circle"></div></a>
         </div>
     </nav>
     <div id="purple">
