--- a/Login/index.html
+++ b/Login/index.html
@@ -42,7 +42,7 @@
                 <input type="email" placeholder="Email">
                 <input type="password" placeholder="Password">
                 <a href="#">Forget Your Password?</a>
-                <button>Login</button>
+                <a href="Loader/index.html"><button>Login</button></a>
             </form>
         </div>
         <div class="toggle-container">
@@ -51,11 +51,21 @@
                     <h1>Welcome Back!</h1>
                     <p>Enter your personal details to use all of site features</p>
                     <button class="hidden" id="login">Login</button>
+                    <p>
+                        <a href="/index.html" class="home">
+                        Return to home!
+                        </a>
+                    </p>
                 </div>
                 <div class="toggle-panel toggle-right">
                     <h1>Hello, Recycler!</h1>
                     <p>Register with your personal details to use all of site features</p>
                     <button class="hidden" id="register">Sign Up</button>
+                    <p>
+                        <a href="/index.html" class="home">
+                        Return to home!
+                        </a>
+                    </p>
                 </div>
             </div>
         </div>
