--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div id="nav2">
             <h4><a href="#Home">Home</a></h4>
             <h4><a href="./daily-ui-008404-page/dist/index.html"> About Us</a></h4>
-            <h4><a href="http://">Locater</a></h4>
+            <h4><a href="./Login/Loader/index.html">Locater</a></h4>
             <h4><a href="http://"></a>Contact</a></h4>
         </div>
         <div id="nav3">
