Added contact form

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <h4><a href="#Home">Home</a></h4>
             <h4><a href="./daily-ui-008404-page/dist/index.html"> About Us</a></h4>
             <h4><a href="./Login/Loader/index.html">Locater</a></h4>
-            <h4><a href="http://"></a>Contact</a></h4>
+            <h4><a href="./Contact/index.html">Contact</a></h4>
         </div>
         <div id="nav3">
             <a href="Login/index.html"><div class="circle"></div></a>
