--- a/Contact/index.html
+++ b/Contact/index.html
@@ -61,15 +61,15 @@
                         <span class="circle one"></span>
                         <span class="circle two"></span>
 
-                        <form action="index.html" autocomplete="off">
+                        <form action="https://formsubmit.co/recyclotronics@protonmail.com" method="POST" autocomplete="off">
                             <h3 class="title">Contact us</h3>
                             <div class="input-container">
-                                <input type="text" name="name" class="input" />
+                                <input type="text" name="name" class="input" required/>
                                 <label for="">Username</label>
                                 <span>Username</span>
                             </div>
                             <div class="input-container">
-                                <input type="email" name="email" class="input" />
+                                <input type="email" name="email" class="input" required/>
                                 <label for="">Email</label>
                                 <span>Email</span>
                             </div>
