Updated form for working

--- a/Contact/index.html
+++ b/Contact/index.html
@@ -61,29 +61,29 @@
                         <span class="circle one"></span>
                         <span class="circle two"></span>
 
-                        <form action="https://formsubmit.co/recyclotronics@protonmail.com" method="POST" autocomplete="off">
+                        <form action="https://formsubmit.co/recyclotronics@protonmail.com" method="POST">
                             <h3 class="title">Contact us</h3>
                             <div class="input-container">
-                                <input type="text" name="name" class="input" required/>
+                                <input type="text" name="Name" class="input" required/>
                                 <label for="">Username</label>
                                 <span>Username</span>
                             </div>
                             <div class="input-container">
-                                <input type="email" name="email" class="input" required/>
+                                <input type="email" name="Email" class="input" required/>
                                 <label for="">Email</label>
                                 <span>Email</span>
                             </div>
                             <div class="input-container">
-                                <input type="tel" name="phone" class="input" />
+                                <input type="tel" name="Phone" class="input" required/>
                                 <label for="">Phone</label>
                                 <span>Phone</span>
                             </div>
                             <div class="input-container textarea">
-                                <textarea name="message" class="input"></textarea>
+                                <textarea name="Message" class="input"></textarea>
                                 <label for="">Message</label>
                                 <span>Message</span>
                             </div>
-                            <button class="bt" id="bt">
+                            <button type="submit" class="bt" id="bt">
                                 <span class="msg" id="msg"></span>
                                 SEND
                             </button>
