--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <!-- PAGE-1 -->
         <div class="page1">
             <h1>RecycloTronics</h1>
+            <!-- <span class="logotext">R</span>e<span class="logotext">c</span>y<span class="logotext">c</span>l<span class="logotext">o</span>T<span class="logotext">r</span>o<span class="logotext">n</span>i<span class="logotext">c</span>s -->
             <h2>E-Waste E-Solved</h2>
             <video src="/assets/header video final.mp4" autoplay muted loop></video>
         </div>
