Edited the login page

--- a/Login/Loader/index.html
+++ b/Login/Loader/index.html
@@ -5,16 +5,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>RecycloTronics-User</title>
+    <link rel="shortcut icon" href="/assets/LOGO.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <div class="container">
         <p>Welcome Recycler!</p>
-
     </div>
 
+
+
+
+
+
+    
+<!-- Do not touch -->
     <div class="loading-page">
         <svg id="svg" xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 320 512">
             
@@ -26,6 +33,8 @@
             <div class="logo-name">RecycloTronics</div>
         </div>
     </div>
+
+
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js"
     integrity="sha512-gmwBmiTVER57N3jYS3LinA9eb8aHrJua5iQD7yqYCKa5x6Jjc7VDVaEA0je0Lu0bP9j7tEjV3+1qUm6loO99Kw=="
