--- a/Login/index.html
+++ b/Login/index.html
@@ -39,10 +39,10 @@
                     <a href="#" class="icon"><i class="fa-brands fa-linkedin-in"></i></a>
                 </div>
                 <span>or use your email password</span>
-                <input type="email" placeholder="Email">
-                <input type="password" placeholder="Password">
+                <input type="email" placeholder="Email" required>
+                <input type="password" placeholder="Password" required>
                 <a href="#">Forget Your Password?</a>
-                <a href="Loader/index.html"><button>Login</button></a>
+                <a href="Loader/index.html"><button type="submit">Login</button></a>
             </form>
         </div>
         <div class="toggle-container">
