Login issue tried to fixed

--- a/Login/index.html
+++ b/Login/index.html
@@ -38,11 +38,11 @@
                     <a href="#" class="icon"><i class="fa-brands fa-github"></i></a>
                     <a href="#" class="icon"><i class="fa-brands fa-linkedin-in"></i></a>
                 </div>
-                <span>or use your email password</span>
-                <input type="email" placeholder="Email" required>
-                <input type="password" placeholder="Password" required>
+                <span>or use your username & password</span>
+                <input type="text" id="username" placeholder="Username" required>
+                <input type="password" id="password" placeholder="Password" required>
                 <a href="#">Forget Your Password?</a>
-                <a href="Loader/index.html"><button type="submit">Login</button></a>
+                <button type="submit" id="myButton" disabled>Login</button>
             </form>
         </div>
         <div class="toggle-container">
