--- a/Login/index.html
+++ b/Login/index.html
@@ -39,10 +39,10 @@
                     <a href="#" class="icon"><i class="fa-brands fa-linkedin-in"></i></a>
                 </div>
                 <span>or use your username & password</span>
-                <input type="text" id="username" placeholder="Username" required>
-                <input type="password" id="password" placeholder="Password" required>
+                <input type="email" id="column1" placeholder="Username">
+                <input type="password" id="column2" placeholder="Password">
                 <a href="#">Forget Your Password?</a>
-                <button type="submit" id="myButton" disabled>Login</button>
+                <button class="button" id="redirect-button">Login</button>
             </form>
         </div>
         <div class="toggle-container">
