--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div id="nav2">
             <h4><a href="#Home">Home</a></h4>
             <h4><a href="./404-page/dist/index.html"> About Us</a></h4>
-            <h4><a href="./Login/Loader/index.html">Locater</a></h4>
+            <h4><a href="./Login/Loader/indexLoader.html">Locater</a></h4>
             <h4><a href="./Contact/index.html">Contact</a></h4>
         </div>
         <div id="nav3">
